<resources>
    <string name="Default">Default</string>
    <string name="aac_profile">AAC profile</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="ad_app_id">ca-app-pub-3055946504065222~2956488339</string>
    <string name="ad_open_id">ca-app-pub-3055946504065222/9893076668</string>
    <string name="ad_unit_id">ca-app-pub-3055946504065222/2041850150</string>
    <string name="add_favorite_app">Add favorite app</string>
    <string name="advance">Advance</string>
    <string name="advanced_options">Advanced options</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Control Center</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_not_found">Application not found!</string>
    <string name="assistive_touch">Assistive Touch</string>
    <string name="audio_config">Audio config</string>
    <string name="audio_encoder">Audio encoder</string>
    <string name="avc_profile">AVCProfile</string>
    <string name="background">Background</string>
    <string name="basic">Basic</string>
    <string name="bitrate">Bitrate (kbps)</string>
    <string name="bluetooth_off">Disconnecting Bluetooth Devices</string>
    <string name="bluetooth_on">Bluetooth Connections Enable</string>
    <string name="bottom">Bottom</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brightness">Brightness</string>
    <string name="calculator">Calculator</string>
    <string name="camera">Camera</string>
    <string name="change_the_position">Drag Edge screen handle to change the position.</string>
    <string name="channels">Channels</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_calculator_app">Choose Calculator App</string>
    <string name="choose_camera_app">Choose Camera App</string>
    <string name="choose_clock_app">Choose Clock App</string>
    <string name="choose_favorite_app">Choose favorite application</string>
    <string name="choose_music_player_firstly">Choose music player</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clock">Clock</string>
    <string name="color">Color</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy">Copy</string>
    <string name="create_record_fails">Create Screen Recorder failure! Please configure setup firstly.</string>
    <string name="current_wallpaper">Current wallpaper</string>
    <string name="customize_control_center_message">Add and organize additional controls to appear in Control Center. The maximum is 8 controls.</string>
    <string name="customize_controls">Customize Controls</string>
    <string name="default_background">Default background</string>
    <string name="do_not_disturb_off">Do Not Disturb: Off</string>
    <string name="do_not_disturb_on">Do Not Disturb: On</string>
    <string name="do_not_show">Do not show again.</string>
    <string name="donate_summary">Download Pro version for donate and remove ads. Thank you very much!</string>
    <string name="donate_title">Download Pro App</string>
    <string name="download">Download</string>
    <string name="download_app">Download app: %s</string>
    <string name="download_assistive_touch">Download Assistive Touch application to use.</string>
    <string name="download_ios_launcher">Download iOS Launcher application to use.</string>
    <string name="download_lock_screen">Download Lock Screen and Notifications to use.</string>
    <string name="download_other_app">Download other my apps</string>
    <string name="email">Email</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit">Exit</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="flash_light">Flash light</string>
    <string name="frame_rate">Frame rate (fps)</string>
    <string name="handle_settings">Handle Settings</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hide_on_keyboard">Hide on keyboard</string>
    <string name="hide_on_keyboard_details">Show on everything feature cannot use when you use this feature.</string>
    <string name="how_to_use">How to use</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="iframe_interval">I-Frame interval</string>
    <string name="include">include</string>
    <string name="intro_1">@string/app_name</string>
    <string name="intro_2">More custom settings</string>
    <string name="intro_3">Easy change style</string>
    <string name="ios_launcher">iOS Launcher (NEW)</string>
    <string name="item_view_role_description">Tab</string>
    <string name="label">Label</string>
    <string name="language">Language</string>
    <string name="left">Left</string>
    <string name="limitation_on_pre_lollipop">Limitation on pre-Lollipop</string>
    <string name="limitation_on_pre_lollipop_details">We always want to bring the best to our users, however your devices using android %s, so we can not support screenshot and record screen features. This is limitation on pre-lollipop and if you like that features please upgrade to android LOLLIPOP. Please do not rated bad if you feel disappointed about that. Thank you so much for your sympathy for us.</string>
    <string name="lock_screen_notifications">Lock screen &amp; Notifications</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="make_handle_control_show_on_everything">Make handle control show on everything, for example as lock screen.</string>
    <string name="more_controls">more controls</string>
    <string name="music_control">Music control</string>
    <string name="orientation">Orientation</string>
    <string name="position">Position</string>
    <string name="rate_title">Rating 5 star</string>
    <string name="record_setup">Record setup</string>
    <string name="record_with_audio">Record with audio</string>
    <string name="record_with_audio_summary">Record screen with audio use micro on your phone. You must grant RECORD AUDIO permission to use this function.</string>
    <string name="resolution">Resolution</string>
    <string name="right">Right</string>
    <string name="sample_rate">Sample rate (Hz)</string>
    <string name="screen_time_out">"Screen
Timeout"</string>
    <string name="screen_time_out_10m">10m</string>
    <string name="screen_time_out_15s">15s</string>
    <string name="screen_time_out_1m">1m</string>
    <string name="screen_time_out_2m">2m</string>
    <string name="screen_time_out_30m">30m</string>
    <string name="screen_time_out_30s">30s</string>
    <string name="show_notification">Show notification</string>
    <string name="show_on_everything">Show on everything</string>
    <string name="size">Size</string>
    <string name="top">Top</string>
    <string name="vibration">Vibration</string>
    <string name="video_config">Video config</string>
    <string name="video_encoder">Video encoder</string>
</resources>