<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView android:id="@id/card_position" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_activity" android:layout_marginBottom="@dimen/card_view_margin_top_bottom" card_view:cardElevation="1.0dip" card_view:cardPreventCornerOverlap="false" card_view:cardUseCompatPadding="true">
            <LinearLayout android:orientation="vertical" android:padding="?dialogPreferredPadding" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:textColor="@color/colorAccent" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/position" style="?android:preferenceCategoryStyle" />
                <RadioGroup android:id="@id/radio_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checkedButton="@id/radio_bottom">
                    <RadioButton android:textAppearance="@style/Base.TextAppearance.AppCompat" android:textSize="16.0sp" android:id="@id/radio_top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_text" android:text="@string/top" />
                    <RadioButton android:textAppearance="@style/Base.TextAppearance.AppCompat" android:textSize="16.0sp" android:id="@id/radio_left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_text" android:text="@string/left" />
                    <RadioButton android:textAppearance="@style/Base.TextAppearance.AppCompat" android:textSize="16.0sp" android:id="@id/radio_right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_text" android:text="@string/right" />
                    <RadioButton android:textAppearance="@style/Base.TextAppearance.AppCompat" android:textSize="16.0sp" android:id="@id/radio_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_text" android:text="@string/bottom" />
                </RadioGroup>
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:textSize="13.0sp" android:id="@id/textView7" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_text" android:text="@string/change_the_position" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/card_view_margin_top_bottom" android:layout_marginBottom="@dimen/padding_activity" android:layout_below="@id/card_position" card_view:cardElevation="1.0dip" card_view:cardPreventCornerOverlap="false" card_view:cardUseCompatPadding="true">
            <LinearLayout android:orientation="vertical" android:padding="?dialogPreferredPadding" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:textColor="@color/colorAccent" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/advanced_options" style="?android:preferenceCategoryStyle" />
                <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat" android:textSize="16.0sp" android:id="@id/textView3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_text" android:text="@string/size" />
                <androidx.appcompat.widget.AppCompatSeekBar android:id="@id/seekbar_action_view_size" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_text" android:max="300" android:progress="100" android:thumb="@drawable/seek_bar_thumb" />
                <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat" android:textSize="16.0sp" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_text" android:text="@string/color" />
                <com.luutinhit.customui.ColorSeekBar android:id="@id/seekBar_color" android:layout_width="wrap_content" android:layout_height="80.0dip" android:layout_marginTop="@dimen/margin_text" card_view:colorSeeds="@array/material_colors" card_view:isVertical="false" card_view:showAlphaBar="true" />
                <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat" android:textSize="16.0sp" android:id="@id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_text" android:text="@string/show_on_everything" />
                <androidx.appcompat.widget.SwitchCompat android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:textSize="13.0sp" android:id="@id/switch_overlay" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_text" android:text="@string/make_handle_control_show_on_everything" />
                <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat" android:textSize="16.0sp" android:id="@id/hide_on_keyboard_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_text" android:text="@string/hide_on_keyboard" />
                <androidx.appcompat.widget.SwitchCompat android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:textSize="13.0sp" android:id="@id/hide_on_keyboard" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_text" android:text="@string/hide_on_keyboard_details" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>
