<?xml version="1.0" encoding="utf-8"?>
<merge android:id="@id/time_out_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button android:textSize="20.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/time_out_15s" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/screen_time_out_15s" android:contentDescription="@string/screen_time_out" app:layout_constraintBottom_toTopOf="@id/time_out_2m" app:layout_constraintEnd_toStartOf="@id/time_out_30s" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/SelectableItemBackground" />
    <Button android:textSize="20.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/time_out_30s" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/screen_time_out_30s" android:contentDescription="@string/screen_time_out" app:layout_constraintBottom_toTopOf="@id/time_out_10m" app:layout_constraintEnd_toStartOf="@id/time_out_1m" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/time_out_15s" app:layout_constraintTop_toTopOf="parent" style="@style/SelectableItemBackground" />
    <Button android:textSize="20.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/time_out_1m" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/screen_time_out_1m" android:contentDescription="@string/screen_time_out" app:layout_constraintBottom_toTopOf="@id/time_out_30m" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/time_out_30s" app:layout_constraintTop_toTopOf="parent" style="@style/SelectableItemBackground" />
    <Button android:textSize="20.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/time_out_2m" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/screen_time_out_2m" android:contentDescription="@string/screen_time_out" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/time_out_10m" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/time_out_15s" style="@style/SelectableItemBackground" />
    <Button android:textSize="20.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/time_out_10m" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/screen_time_out_10m" android:contentDescription="@string/screen_time_out" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/time_out_30m" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/time_out_2m" app:layout_constraintTop_toBottomOf="@id/time_out_30s" style="@style/SelectableItemBackground" />
    <Button android:textSize="20.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/time_out_30m" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/screen_time_out_30m" android:contentDescription="@string/screen_time_out" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/time_out_10m" app:layout_constraintTop_toBottomOf="@id/time_out_1m" style="@style/SelectableItemBackground" />
</merge>
